# NIP-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NIP_Engine/: BMP_Loader.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityCamera.cpp  EntityCamera.h  EntityRenderer.cpp  EntityRenderer.h  EntityTransform.cpp  EntityTransform.h  GameObject.cpp  GameObject.h  NIP_Engine.cpp  NIP_Engine.h  NIP_PCH.cpp  NIP_PCH.h  OBJ_Loader.h  Shader_Loader.h  Test.cpp  Test.h  TestWindow.cpp  TestWindow.h  Window.cpp  Window.h  core.h
NIP_Engine/NIP_Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.cpp  Window.h
NIP_Engine/NIP_Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
NIP_Engine/Shaders/: debug.frag  debug.vert
Sandbox/: Application.cpp  CMakeLists.txt  Sandbox.cpp
